--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "poetiq-pixels",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Jeryluxshigan/poetiq-pixels.git",
+  "homepage": "https://jeryluxshigan.github.io/poetiq-pixels/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
